--- a/package.json
+++ b/package.json
@@ -14,82 +14,82 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.12",
-    "@clerk/themes": "^2.2.26",
+    "@clerk/nextjs": "^6.20.2",
+    "@clerk/themes": "^2.2.48",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.69.0",
-    "@tiptap/core": "^2.11.5",
-    "@tiptap/extension-image": "^2.11.5",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-placeholder": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "@trpc/client": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
-    "@trpc/server": "^11.0.0",
-    "@uploadthing/react": "^7.3.0",
+    "@tanstack/react-query": "^5.80.3",
+    "@tiptap/core": "^2.12.0",
+    "@tiptap/extension-image": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-placeholder": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "@trpc/client": "^11.2.0",
+    "@trpc/react-query": "^11.2.0",
+    "@trpc/server": "^11.2.0",
+    "@uploadthing/react": "^7.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.39.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.39.3",
     "lucide-react": "^0.487.0",
-    "next": "^15.4.0-canary.39",
+    "next": "^15.4.0",
     "next-themes": "^0.4.6",
-    "openai": "^4.94.0",
-    "posthog-js": "^1.218.1",
-    "prismjs": "^1.29.0",
+    "openai": "^4.104.0",
+    "posthog-js": "^1.249.3",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.54.2",
-    "sanitize-html": "^2.13.0",
+    "react-hook-form": "^7.57.0",
+    "sanitize-html": "^2.17.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.3",
-    "sonner": "^2.0.3",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^3.1.0",
-    "uploadthing": "^7.6.0",
-    "zod": "^3.24.2"
+    "sharp": "^0.33.5",
+    "sonner": "^2.0.5",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.0",
+    "uploadthing": "^7.7.2",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@happy-dom/global-registrator": "^17.4.4",
-    "@tailwindcss/postcss": "^4.1.3",
+    "@happy-dom/global-registrator": "^17.6.3",
+    "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.14.1",
-    "@types/prismjs": "^1.26.3",
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.0.0",
-    "@types/sanitize-html": "^2.11.0",
-    "bun-types": "^1.2.13",
-    "drizzle-kit": "^0.30.4",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "^15.4.0-canary.39",
+    "@types/node": "^22.15.29",
+    "@types/prismjs": "^1.26.5",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "@types/sanitize-html": "^2.16.0",
+    "bun-types": "^1.2.15",
+    "drizzle-kit": "^0.30.6",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "^15.4.0-canary.65",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.4",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1"
+    "typescript-eslint": "^8.33.1"
   }
 }
