--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.20.2",
-    "@clerk/themes": "^2.2.48",
+    "@clerk/nextjs": "^6.21.0",
+    "@clerk/themes": "^2.2.49",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -30,17 +30,17 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.80.3",
-    "@tiptap/core": "^2.12.0",
-    "@tiptap/extension-image": "^2.12.0",
-    "@tiptap/extension-link": "^2.12.0",
-    "@tiptap/extension-placeholder": "^2.12.0",
-    "@tiptap/pm": "^2.12.0",
-    "@tiptap/react": "^2.12.0",
-    "@tiptap/starter-kit": "^2.12.0",
-    "@trpc/client": "^11.2.0",
-    "@trpc/react-query": "^11.2.0",
-    "@trpc/server": "^11.2.0",
+    "@tanstack/react-query": "^5.80.7",
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-image": "^2.14.0",
+    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
+    "@trpc/client": "^11.4.0",
+    "@trpc/react-query": "^11.4.0",
+    "@trpc/server": "^11.4.0",
     "@uploadthing/react": "^7.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -50,10 +50,10 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.3",
     "lucide-react": "^0.487.0",
-    "next": "^15.4.0",
+    "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "openai": "^4.104.0",
-    "posthog-js": "^1.249.3",
+    "posthog-js": "^1.251.0",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -63,33 +63,33 @@
     "sharp": "^0.33.5",
     "sonner": "^2.0.5",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.2",
-    "zod": "^3.25.51"
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@happy-dom/global-registrator": "^17.6.3",
-    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.29",
+    "@types/node": "^22.15.31",
     "@types/prismjs": "^1.26.5",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/sanitize-html": "^2.16.0",
-    "bun-types": "^1.2.15",
+    "bun-types": "^1.2.16",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.28.0",
-    "eslint-config-next": "^15.4.0-canary.65",
+    "eslint-config-next": "^15.3.3",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.5.4",
+    "postcss": "^8.5.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1"
+    "typescript-eslint": "^8.34.0"
   }
 }
