--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.23.3",
-    "@clerk/themes": "^2.2.54",
+    "@clerk/nextjs": "^6.25.4",
+    "@clerk/themes": "^2.3.3",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -32,14 +32,14 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.81.5",
-    "@tiptap/core": "^2.24.2",
-    "@tiptap/extension-image": "^2.24.2",
-    "@tiptap/extension-link": "^2.24.2",
-    "@tiptap/extension-placeholder": "^2.24.2",
-    "@tiptap/pm": "^2.24.2",
-    "@tiptap/react": "^2.24.2",
-    "@tiptap/starter-kit": "^2.24.2",
+    "@tanstack/react-query": "^5.83.0",
+    "@tiptap/core": "^2.26.1",
+    "@tiptap/extension-image": "^2.26.1",
+    "@tiptap/extension-link": "^2.26.1",
+    "@tiptap/extension-placeholder": "^2.26.1",
+    "@tiptap/pm": "^2.26.1",
+    "@tiptap/react": "^2.26.1",
+    "@tiptap/starter-kit": "^2.26.1",
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
@@ -50,12 +50,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.44.2",
+    "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.487.0",
-    "next": "^15.4.0-canary.114",
+    "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "openai": "^4.104.0",
-    "posthog-js": "^1.256.2",
+    "posthog-js": "^1.257.1",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -67,7 +67,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
-    "zod": "^3.25.74"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -76,22 +76,22 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.16.0",
+    "@types/node": "^22.16.5",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/sanitize-html": "^2.16.0",
-    "bun-types": "^1.2.18",
+    "bun-types": "^1.2.19",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^9.30.1",
-    "eslint-config-next": "^15.4.0-canary.114",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.2",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1"
+    "typescript-eslint": "^8.38.0"
   }
 }
