--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,6 @@ NEXT_PUBLIC_POSTHOG_KEY=""
 # (see https://vercel.com/docs/environment-variables/system-environment-variables)
 NEXT_PUBLIC_VERCEL_ENV=""
 NEXT_PUBLIC_VERCEL_GIT_COMMIT_REF=""
+NEXT_PUBLIC_VERCEL_GIT_COMMIT_MESSAGE=""
 NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=""
 NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL=""
