--- a/package.json
+++ b/package.json
@@ -53,48 +53,48 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.526.0",
-    "next": "^15.5.2",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "openai": "^5.16.0",
     "posthog-js": "^1.261.0",
     "prismjs": "^1.30.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.65.0",
     "sanitize-html": "^2.17.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.34.3",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
-    "zod": "^4.1.5"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@happy-dom/global-registrator": "^18.0.1",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@happy-dom/global-registrator": "^20.0.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.7.2",
     "@types/prismjs": "^1.26.5",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@types/sanitize-html": "^2.16.0",
-    "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
-    "bun-types": "^1.2.21",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "bun-types": "^1.3.0",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^9.34.0",
-    "eslint-config-next": "^15.5.2",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.7",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.41.0"
+    "tailwindcss": "^4.1.14",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.0"
   }
 }
