--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack --experimental-https",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "test": "bun test",
@@ -53,7 +53,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.526.0",
-    "next": "^15.5.4",
+    "next": "^16.0.0",
     "next-themes": "^0.4.6",
     "openai": "^5.16.0",
     "posthog-js": "^1.261.0",
