--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --experimental-https",
-    "build": "next build",
-    "start": "next start",
+    "dev": "bun --bun run next dev --experimental-https",
+    "build": "bun --bun run next build",
+    "start": "bun --bun run next start",
     "test": "bun test",
     "lint": "bunx next typegen && eslint . && tsc --noEmit",
     "check": "bunx next typegen && eslint . && tsc --noEmit && bun test",
-    "db:studio": "drizzle-kit studio",
-    "db:push": "drizzle-kit push"
+    "db:studio": "bun --bun run drizzle-kit studio",
+    "db:push": "bun --bun run drizzle-kit push"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.1",
@@ -82,7 +82,7 @@
     "@types/react-dom": "^19.2.2",
     "@types/sanitize-html": "^2.16.0",
     "babel-plugin-react-compiler": "^1.0.0",
-    "bun-types": "^1.3.1",
+    "bun-types": "^1.3.2",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.39.0",
     "eslint-config-next": "^16.0.1",
